# teamgun

./: README.md  pyproject.toml
src/teamgun/: who.py
tests/: test_who.py
